WIP: Use skopeo to fetch images
The goal here is to implement: https://github.com/ostreedev/ostree-rs-ext/issues/6

We want to honor things like mirroring set up in `/etc/containers`.

However, after doing all this work I hit on two things:

- containers/image barfs if the destination is a pipe
- And actually even if we ask to copy into an `oci-archive` it still
  spools everything to a temporary directory and then tars it
  back up, entirely obviating the point of streaming.

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -9,10 +9,13 @@ readme = "README.md"
 
 [dependencies]
 anyhow = "1.0"
-ostree-ext = { path = "../lib", features = ["container"] }
+ostree-ext = { path = "../lib" }
 clap = "2.33.3"
 structopt = "0.3.21"
 ostree = { version = "0.11.0", features = ["v2021_2"] }
 libc = "0.2.92"
 tokio = { version = "1", features = ["full"] }
 gio = "0.9.1"
+log = "0.4.0"
+env_logger = "0.8.3"
+
