--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,6 @@ members = ["cli", "lib"]
 [profile.release]
 codegen-units = 1
 lto = "thin"
+
+[patch.crates-io]
+ostree = { path = "../ostree-rs" }
