--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -11,6 +11,7 @@ version = "0.4.0-alpha.0"
 [dependencies]
 anyhow = "1.0"
 bytes = "1.0.1"
+bitflags = "1.3.2"
 camino = "1.0.4"
 cjson = "0.1.1"
 flate2 = { features = ["zlib"], default_features = false, version = "1.0.20" }
@@ -19,6 +20,7 @@ futures-util = "0.3.13"
 gvariant = "0.4.0"
 hex = "0.4.3"
 indicatif = "0.16.0"
+lazy_static = "1.4.0"
 libc = "0.2.92"
 maplit = "1.0.2"
 nix = "0.22.0"
