--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -10,7 +10,7 @@ version = "0.6.5"
 
 [dependencies]
 anyhow = "1.0"
-containers-image-proxy = "0.4.0"
+containers-image-proxy = { features = ["proxy_v0_2_3"], version = "0.4.0" }
 
 async-compression = { version = "0.3", features = ["gzip", "tokio"] }
 bitflags = "1"
@@ -57,4 +57,3 @@ features = ["dox"]
 [features]
 dox = ["ostree/dox"]
 internal-testing-api = []
-proxy_v0_2_3 = ["containers-image-proxy/proxy_v0_2_3"]
