--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -11,7 +11,7 @@ version = "0.5.1"
 [dependencies]
 anyhow = "1.0"
 # containers-image-proxy = "0.3"
-containers-image-proxy = { git = "https://github.com/containers/containers-image-proxy-rs" }
+containers-image-proxy = { git = "https://github.com/cgwalters/containers-image-proxy-rs", branch = "feature-023", features = [ "proxy_v0_2_3" ] }
 
 async-compression = { version = "0.3", features = ["gzip", "tokio"] }
 bitflags = "1"
